# agents-skills

./: .gitignore  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  engine.instructions.md  memory.instructions.md  skills.instructions.md  templates.instructions.md
engine/: __init__.py  conversation.py  coordinator.py  executor.py  llm.py
memory/: __init__.py  models.py  state_manager.py
persistence/: __init__.py  json_saver.py
reservations/: sarah_mitchell_20251207_180320.json  sarah_mitchell_20251207_195320.json
shared/: __init__.py  enums.py
skills/: __init__.py  base.py  outputs.py  registry.py
templates/: environment.py
templates/memory/: core.j2  episodic.j2  semantic.j2  workflow.j2  working.j2
templates/skills/: alternative.j2  availability.j2  confirmation.j2  details.j2  error_recovery.j2  greeting.j2  menu.j2  save.j2
